[package]
name = "axum-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15.0"
bot_sdk_line = {version = "0.1.5",features = ["axum_support"]}
serde_json = "1.0.140"