[package]
name = "ntex-example"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
ntex = { version = "2.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[dependencies.line_bot_sdk_rust]
git = "https://github.com/Kayxue/LineBotSdkRust.git"
branch = "master"
features = ["ntex_support"]
