[package]
name = "xitca-example"
version = "0.1.0"
edition = "2024"

[dependencies]
xitca-web = { version = "*", features = ["logger", "json", "codegen"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.140"

[dependencies.bot_sdk_line]
git = "https://github.com/Kayxue/LineBotSdkRust.git"
branch = "master"
features = ["xitca_support"]
